Hourly scheduled redeploy cc6e74af2fc659d2781a5b5dabf82d5770a38cb6

--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -444,16 +444,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.selby.gov.uk" class="govuk-link">Selby District Council</a></li>
-      <li><a href="http://www.flintshire.gov.uk" class="govuk-link">Flintshire County Council</a></li>
-      <li><a href="http://www.eastcambs.gov.uk" class="govuk-link">East Cambridgeshire District Council</a></li>
       <li><a href="https://www.nhs.uk/conditions/stress-anxiety-depression/benefits-of-talking-therapy/" class="govuk-link">Talking therapy - NHS</a></li>
-      <li><a href="http://www.telford.gov.uk" class="govuk-link">Telford &amp; Wrekin Council</a></li>
-      <li><a href="http://findyourmp.parliament.uk/" class="govuk-link">Find your MP - UK Parliament</a></li>
-      <li><a href="http://www.iwight.com" class="govuk-link">Isle of Wight Council</a></li>
-      <li><a href="http://www.richmond.gov.uk/" class="govuk-link">London Borough of Richmond upon Thames Council</a></li>
-      <li><a href="https://nationalcareersservice.direct.gov.uk/advice/courses/" class="govuk-link">Courses and learning - National Careers Service</a></li>
-      <li><a href="http://www.highpeak.gov.uk" class="govuk-link">High Peak Borough Council</a></li>
+      <li><a href="http://www.flintshire.gov.uk" class="govuk-link">Flintshire County Council</a></li>
+      <li><a href="http://www.caerphilly.gov.uk" class="govuk-link">Caerphilly County Borough Council</a></li>
+      <li><a href="https://www.nhs.uk/conditions/social-care-and-support-guide/care-services-equipment-and-care-homes/care-homes/" class="govuk-link">Care homes - NHS</a></li>
+      <li><a href="http://www.eden.gov.uk/" class="govuk-link">Eden District Council</a></li>
+      <li><a href="http://www.selby.gov.uk" class="govuk-link">Selby District Council</a></li>
+      <li><a href="http://www.bromley.gov.uk" class="govuk-link">London Borough of Bromley Council</a></li>
+      <li><a href="http://www.southsomerset.gov.uk" class="govuk-link">South Somerset District Council</a></li>
+      <li><a href="http://www.uttlesford.gov.uk" class="govuk-link">Uttlesford District Council</a></li>
+      <li><a href="http://www.newark-sherwooddc.gov.uk" class="govuk-link">Newark and Sherwood District Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
