--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -359,16 +359,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.bromsgrove.gov.uk">Bromsgrove District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.kingston.gov.uk/">Royal Borough of Kingston upon Thames Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.justice.gov.uk/courts/procedure-rules/family">Family Procedure Rules</a></li>
-<li><a href="https://www.gov.ukhttps//census.gov.uk/">Census 2021</a></li>
-<li><a href="https://www.gov.ukhttp//www.richmondshire.gov.uk">Richmondshire District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.flintshire.gov.uk">Flintshire County Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.nhs.uk/conditions/stress-anxiety-depression/benefits-of-talking-therapy/">Talking therapy - NHS</a></li>
+<li><a href="https://www.gov.ukhttp//www.eden.gov.uk/">Eden District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.york.gov.uk">York City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.caerphilly.gov.uk">Caerphilly County Borough Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.chorley.gov.uk">Chorley Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.birmingham.gov.uk">Birmingham City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.herefordshire.gov.uk">Herefordshire Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.ethnicity-facts-figures.service.gov.uk/crime-justice-and-the-law/policing/stop-and-search/latest">Stop and search | Ethnicity facts and figures</a></li>
-<li><a href="https://www.gov.ukhttp//www.northdown.gov.uk">North Down Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.richmondshire.gov.uk">Richmondshire District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.southsomerset.gov.uk">South Somerset District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.newark-sherwooddc.gov.uk">Newark and Sherwood District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.bromley.gov.uk">London Borough of Bromley Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
