Hourly scheduled redeploy cc6e74af2fc659d2781a5b5dabf82d5770a38cb6

--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/264569.es-419">Ministro para Latinoamérica participa en el Chile Day 2014</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/242212.el">Εκδήλωση για τον εορτασμό των γενεθλίων της ΑΜ Της Βασίλισσας Ελισάβετ ΙΙ</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/climate-change-energy-and-programme-team-in-mexico-city--2">Climate Change, Energy and Programme Team in Mexico City</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/265215.ja">英国ショッピングウィーク　 トークショーを連日開催</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/201656.es-419">Uruguay participa en Cumbre de la Alianza para Gobierno Abierto</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/193179.ur">برطانوی سینئر فارن  آفس منسٹر بیرونیس وارثی کی پاکستان آمد</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/210578.lt">JK ministrų pareiškimas dėl Tarptautinės antikorupcijos dienos</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/applications-for-the-uk-governments-prestigious-chevening-scholarships-are-open--2">Applications for the UK Government’s prestigious Chevening Scholarships are open</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/international-womens-day">International Women&rsquo;s Day</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/231664.es-419">Red social de salud más importante de Europa llega a Chile</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--9">Advice for British nationals in Kolkata</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/176254.es-419">Concurso: Green is GREAT</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/232492.ja">Educational Testing Service (ETS)　について</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/211747.bg">Дейвид Лидингтън оцени високо спасяването на българските евреи</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/261846.pt">Parques tecnológicos e incubadoras em Florianópolis</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/william-hague-and-angelina-jolie-visit-rwanda">William Hague and Angelina Jolie visit Rwanda</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/253325.pt">Reino Unido busca ampliar parcerias para Rio 2016</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/289211.pt">CARIOCAS GLOBAIS</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/297168.cs">Jaké reformě EU chce Británie napomoci?</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/269080.es-419">Discurso pronunciado por Su Alteza Real El Príncipe De Gales durante el evento de Paz y Reconciliación en su visita a Colombia</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
