--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--9">Advice for British nationals in Kolkata</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/176254.es-419">Concurso: Green is GREAT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/232492.ja">Educational Testing Service (ETS)　について</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/211747.bg">Дейвид Лидингтън оцени високо спасяването на българските евреи</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/261846.pt">Parques tecnológicos e incubadoras em Florianópolis</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/william-hague-and-angelina-jolie-visit-rwanda">William Hague and Angelina Jolie visit Rwanda</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/294171.es-419">Ministro Británico de Estado para América Latina felicita al nuevo Vicepresidente de Guatemala</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/futures-congress-with-large-presence-of-uk-experts-in-chile--2">Futures Congress with large presence of UK experts in Chile</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/253325.pt">Reino Unido busca ampliar parcerias para Rio 2016</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/289211.pt">CARIOCAS GLOBAIS</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/242212.el">Εκδήλωση για τον εορτασμό των γενεθλίων της ΑΜ Της Βασίλισσας Ελισάβετ ΙΙ</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/climate-change-energy-and-programme-team-in-mexico-city--2">Climate Change, Energy and Programme Team in Mexico City</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/284721.es-419">British Council y Ministerio de Educación inician Escuela de Verano para capacitar a 400 profesores peruanos de inglés</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-calls-for-closer-joint-work-in-south-east-asia-to-protect-children-from-trafficking--2">UK calls for closer joint work in South East Asia to protect children from trafficking</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/271980.es-419">Resumen de la Visita Real del Príncipe de Gales y la Duquesa de Cornwall a México</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/220494.es-419">Medirán emisiones de metano con muestras tomadas en Chacaltaya</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/297168.cs">Jaké reformě EU chce Británie napomoci?</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/269080.es-419">Discurso pronunciado por Su Alteza Real El Príncipe De Gales durante el evento de Paz y Reconciliación en su visita a Colombia</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
