--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/269080.es-419">Discurso pronunciado por Su Alteza Real El Príncipe De Gales durante el evento de Paz y Reconciliación en su visita a Colombia</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/193179.ur">برطانوی سینئر فارن  آفس منسٹر بیرونیس وارثی کی پاکستان آمد</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/210578.lt">JK ministrų pareiškimas dėl Tarptautinės antikorupcijos dienos</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/applications-for-the-uk-governments-prestigious-chevening-scholarships-are-open--2">Applications for the UK Government’s prestigious Chevening Scholarships are open</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/265215.ja">英国ショッピングウィーク　 トークショーを連日開催</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-update--4">Turks and Caicos post Cabinet update</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/global-summit-to-end-sexual-violence-in-conflict--4">Global Summit to End Sexual Violence in Conflict</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-delegation-announces-its-2013-industry-day-the-future-of-nato-business--2">UK Delegation announces its 2013 Industry Day: The Future of NATO Business</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/foreign-office-minister-hugo-swire-opens-new-british-embassy-in-haiti">Foreign Office Minister Hugo Swire opens new British Embassy in Haiti</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-statement-on-iraq-human-rights-council-28th-session-geneva">UK Statement on Iraq, Human Rights Council, 28th session, Geneva</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/242212.el">Εκδήλωση για τον εορτασμό των γενεθλίων της ΑΜ Της Βασίλισσας Ελισάβετ ΙΙ</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/climate-change-energy-and-programme-team-in-mexico-city--2">Climate Change, Energy and Programme Team in Mexico City</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/212474.ja">G8認知症サミットが開催されました</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/210451.ar">تغييرات في طرق الدفع للتأشيرة الإلكترونية إلى بريطانيا</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/vacancies-at-the-british-embassy-prague--2">Vacancies at the British Embassy Prague</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-ambassador-honours-positive-role-of-gaa-at-london-gala-dinner--2">British Ambassador to Ireland honours role of the Gaelic Athletic Association</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/259217.pt">Britânicos visitam RS em busca de empreendedores e investidores</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-visa-application-centre-changes-location--2">UK Visa Application Centre changes location</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/falkland-islanders-make-case-for-self-determination-in-honduras">Falkland Islanders make case for self-determination in Honduras</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/257425.ja">英国ショッピングウィークを今秋、日本で初開催</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
