Hourly scheduled redeploy df7ebf038cc1c9fee7f6f42212347d5256d3b7fc

--- a/apps/content-publisher.html
+++ b/apps/content-publisher.html
@@ -487,7 +487,7 @@
       <li><a href="https://www.gov.uk/government/news/pension-fee-shake-up" class="govuk-link">Pension fee shake-up</a></li>
       <li><a href="https://www.gov.uk/government/news/new-standard-tenancy-agreement-to-help-renters-with-well-behaved-pets" class="govuk-link">New standard tenancy agreement to help renters with well behaved pets</a></li>
       <li><a href="https://www.gov.uk/government/news/new-95-mortgage-scheme-launches" class="govuk-link">New 95% mortgage scheme launches</a></li>
-      <li><a href="https://www.gov.uk/government/news/covid-19-vaccines-11-700-deaths-prevented" class="govuk-link">COVID-19 vaccines: 11,700 deaths prevented</a></li>
+      <li><a href="https://www.gov.uk/government/news/jcvi-issues-new-advice-on-covid-19-vaccination-for-pregnant-women" class="govuk-link">JCVI issues new advice on COVID-19 vaccination for pregnant women</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
