--- a/document-types/closed_consultation.html
+++ b/document-types/closed_consultation.html
@@ -330,7 +330,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: closed_consultation</h1>
 
-  <p>There are <strong>964</strong> pages with document type
+  <p>There are <strong>965</strong> pages with document type
 &lsquo;closed_consultation&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -361,6 +361,7 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
+<li><a href="https://www.gov.uk/government/consultations/making-vaccination-a-condition-of-deployment-in-older-adult-care-homes">Making vaccination a condition of deployment in older adult care homes</a></li>
 <li><a href="https://www.gov.uk/government/consultations/new-plan-for-immigration">New Plan for Immigration</a></li>
 <li><a href="https://www.gov.uk/government/consultations/revised-gcse-qualifications-in-modern-foreign-languages">Revised GCSE qualifications in modern foreign languages</a></li>
 <li><a href="https://www.gov.uk/government/consultations/planning-for-the-future">Planning for the future</a></li>
@@ -370,7 +371,6 @@
 <li><a href="https://www.gov.uk/government/consultations/future-oversight-of-the-cmas-open-banking-remedies">Future oversight of the CMA’s open banking remedies</a></li>
 <li><a href="https://www.gov.uk/government/consultations/ending-the-sale-of-energy-drinks-to-children">Ending the sale of energy drinks to children</a></li>
 <li><a href="https://www.gov.uk/government/consultations/violence-against-women-and-girls-vawg-call-for-evidence">Violence Against Women and Girls (VAWG) Call for Evidence</a></li>
-<li><a href="https://www.gov.uk/government/consultations/charity-responsible-investment-guidance">Charity responsible investment guidance</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=closed_consultation&amp;count=10">Source query from Search API</a></p>
 
