--- a/document-types/open_consultation.html
+++ b/document-types/open_consultation.html
@@ -330,7 +330,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: open_consultation</h1>
 
-  <p>There are <strong>100</strong> pages with document type
+  <p>There are <strong>99</strong> pages with document type
 &lsquo;open_consultation&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -363,7 +363,6 @@
 <ul>
 <li><a href="https://www.gov.uk/government/consultations/womens-health-strategy-call-for-evidence">Women&rsquo;s Health Strategy: Call for Evidence</a></li>
 <li><a href="https://www.gov.uk/government/consultations/arrangements-for-non-exam-assessment-for-qualifications-in-2022">Arrangements for non-exam assessment for qualifications in 2022</a></li>
-<li><a href="https://www.gov.uk/government/consultations/making-vaccination-a-condition-of-deployment-in-older-adult-care-homes">Making vaccination a condition of deployment in older adult care homes</a></li>
 <li><a href="https://www.gov.uk/government/consultations/protect-duty">Protect Duty</a></li>
 <li><a href="https://www.gov.uk/government/consultations/restoring-trust-in-audit-and-corporate-governance-proposals-on-reforms">Restoring trust in audit and corporate governance: proposals on reforms</a></li>
 <li><a href="https://www.gov.uk/government/consultations/womens-health-strategy-call-for-evidence-easy-read">Women&rsquo;s Health Strategy: Call for Evidence (easy read)</a></li>
@@ -371,6 +370,7 @@
 <li><a href="https://www.gov.uk/government/consultations/pension-scams-empowering-trustees-and-protecting-members">Pension scams: empowering trustees and protecting members</a></li>
 <li><a href="https://www.gov.uk/government/consultations/regulating-healthcare-professionals-protecting-the-public">Regulating healthcare professionals, protecting the public</a></li>
 <li><a href="https://www.gov.uk/government/consultations/computer-misuse-act-1990-call-for-information">Computer Misuse Act 1990: call for information</a></li>
+<li><a href="https://www.gov.uk/government/consultations/trade-with-canada-and-mexico-call-for-input">Trade with Canada and Mexico: call for input</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=open_consultation&amp;count=10">Source query from Search API</a></p>
 
