Hourly scheduled redeploy df7ebf038cc1c9fee7f6f42212347d5256d3b7fc

--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
+<li><a href="https://www.gov.uk/government/world-location-news/210451.ar">تغييرات في طرق الدفع للتأشيرة الإلكترونية إلى بريطانيا</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/247263.zh">秦海璐出任中英电影大使 受邀探访英国影视产业</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-high-commissioner-in-delhi-to-meet-the-chief-minister-of-gujarat">British High Commissioner in Delhi to meet the Chief Minister of Gujarat</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/first-uk-paraguay-trade-and-investment-forum-took-place-in-london--2">First UK – Paraguay Trade and Investment Forum took place in London</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/angolan-chevening-scholars-reception-in-luanda--2">Reception for Angolan Chevening Scholars held in Luanda</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/--8">英國貿易投資署和英國智慧財產權官員協助蘇格蘭威士忌協會打擊中國侵權，成功捍衛蘇格蘭原產地地理標示資格</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/296916.pt">MAGNA CARTA</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/embassy-closure--3">Embassy closure</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/179024.lt">Siekiant taikos Artimuosiuose Rytuose ir Š.Afrikoje</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-visa-application-centre-changes-location--2">UK Visa Application Centre changes location</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/falkland-islanders-make-case-for-self-determination-in-honduras">Falkland Islanders make case for self-determination in Honduras</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/207016.pt">Rede Britânica de Ciência e Inovação traz palestra do carro mais veloz do mundo a estudantes e professores do SENAI-SP</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--5">Advice for British nationals in Chennai</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-in-morocco-celebrates-queens-birthday--2">British Embassy in Morocco celebrates Queen’s Birthday</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/president-pierre-buyoya-opens-second-wilton-park-conference-on-peacebuilding-in-africa-in-addis-ababa--2">President Pierre Buyoya opens second Wilton Park conference on ‘Peacebuilding in Africa’ in Addis Ababa</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/governor-of-the-cayman-islands-invites-nominations-for-honours--2">Governor of the Cayman Islands invites nominations for honours</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/tci-post-cabinet-statement--2">Turks and Caicos Islands post Cabinet statement</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/193179.ur">برطانوی سینئر فارن  آفس منسٹر بیرونیس وارثی کی پاکستان آمد</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/foreign-office-minister-hugo-swire-opens-new-british-embassy-in-haiti">Foreign Office Minister Hugo Swire opens new British Embassy in Haiti</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
