--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -359,16 +359,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.richmondshire.gov.uk">Richmondshire District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.west-dunbarton.gov.uk/">West Dunbartonshire Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.ethnicity-facts-figures.service.gov.uk/crime-justice-and-the-law/policing/stop-and-search/latest">Stop and search | Ethnicity facts and figures</a></li>
-<li><a href="https://www.gov.ukhttp//www.highpeak.gov.uk">High Peak Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.bolton.gov.uk">Bolton Metropolitan Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.calderdale.gov.uk">Calderdale Metropolitan Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.copelandbc.gov.uk/">Copeland Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.north-herts.gov.uk">North Hertfordshire District Council</a></li>
-<li><a href="https://www.gov.ukhttp//findyourmp.parliament.uk/">Find your MP - UK Parliament</a></li>
-<li><a href="https://www.gov.ukhttp//www.ballymena.gov.uk/">Ballymena Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.justice.gov.uk/courts/procedure-rules/family">Family Procedure Rules</a></li>
+<li><a href="https://www.gov.ukhttps//www.nhs.uk/conditions/stress-anxiety-depression/benefits-of-talking-therapy/">Talking therapy - NHS</a></li>
+<li><a href="https://www.gov.ukhttp//www.southsomerset.gov.uk">South Somerset District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.northdown.gov.uk">North Down Borough Council</a></li>
+<li><a href="https://www.gov.ukhttps//census.gov.uk/">Census 2021</a></li>
+<li><a href="https://www.gov.ukhttp//www.herefordshire.gov.uk">Herefordshire Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.charnwood.gov.uk">Charnwood Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.barnet.gov.uk/">London Borough of Barnet Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.manchester.gov.uk">Manchester City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.coventry.gov.uk">Coventry City Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
