Hourly scheduled redeploy b3d0d8df35cdbbb3caa306a7a6f6eefa74403663

--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -363,14 +363,14 @@
 <ul>
 <li><a href="https://www.gov.uk/government/world-location-news/242212.el">Εκδήλωση για τον εορτασμό των γενεθλίων της ΑΜ Της Βασίλισσας Ελισάβετ ΙΙ</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/climate-change-energy-and-programme-team-in-mexico-city--2">Climate Change, Energy and Programme Team in Mexico City</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/212474.ja">G8認知症サミットが開催されました</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/210451.ar">تغييرات في طرق الدفع للتأشيرة الإلكترونية إلى بريطانيا</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/vacancies-at-the-british-embassy-prague--2">Vacancies at the British Embassy Prague</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-ambassador-honours-positive-role-of-gaa-at-london-gala-dinner--2">British Ambassador to Ireland honours role of the Gaelic Athletic Association</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/259217.pt">Britânicos visitam RS em busca de empreendedores e investidores</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-visa-application-centre-changes-location--2">UK Visa Application Centre changes location</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/falkland-islanders-make-case-for-self-determination-in-honduras">Falkland Islanders make case for self-determination in Honduras</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/257425.ja">英国ショッピングウィークを今秋、日本で初開催</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/284721.es-419">British Council y Ministerio de Educación inician Escuela de Verano para capacitar a 400 profesores peruanos de inglés</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/change-to-visa-process-for-applicants-travelling-to-the-uk-for-more-than-6-months--2">Change to visa process for applicants travelling to the UK for more than 6 months</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-calls-for-closer-joint-work-in-south-east-asia-to-protect-children-from-trafficking--2">UK calls for closer joint work in South East Asia to protect children from trafficking</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/271980.es-419">Resumen de la Visita Real del Príncipe de Gales y la Duquesa de Cornwall a México</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/290860.pt">#Rio450</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/minister-for-europe-visits-switzerland">Minister for Europe visits Switzerland</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-statement--3">Turks and Caicos post Cabinet Statement</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/220494.es-419">Medirán emisiones de metano con muestras tomadas en Chacaltaya</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
