Hourly scheduled redeploy b3d0d8df35cdbbb3caa306a7a6f6eefa74403663

--- a/document-types/content_purpose_subgroup.html
+++ b/document-types/content_purpose_subgroup.html
@@ -413,7 +413,7 @@
 <strong>research</strong><br>
 </td>
 <td>
-<a href="/document-types/dfid_research_output.html">dfid_research_output</a><br><a href="/document-types/flood_and_coastal_erosion_risk_management_research_report.html">flood_and_coastal_erosion_risk_management_research_report</a><br><a href="/document-types/independent_report.html">independent_report</a><br><a href="/document-types/research.html">research</a>
+<a href="/document-types/dfid_research_output.html">dfid_research_output</a><br><a href="/document-types/independent_report.html">independent_report</a><br><a href="/document-types/research.html">research</a>
 </td>
 </tr><tr>
 <td>
