--- a/document-types/flood_and_coastal_erosion_risk_management_research_report.html
+++ b/document-types/flood_and_coastal_erosion_risk_management_research_report.html
@@ -351,10 +351,10 @@ actually any pages with this document type.</p>
 <td>other</td>
 </tr><tr>
 <td><a href="/document-types/content_purpose_subgroup.html">Content Purpose Subgroup</a></td>
-<td>research</td>
+<td>other</td>
 </tr><tr>
 <td><a href="/document-types/content_purpose_supergroup.html">Content Purpose Supergroup</a></td>
-<td>research_and_statistics</td>
+<td>other</td>
 </tr>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
