--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -444,16 +444,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.redbridge.gov.uk/" class="govuk-link">London Borough of Redbridge Council</a></li>
+      <li><a href="http://www.harlow.gov.uk" class="govuk-link">Harlow District Council</a></li>
+      <li><a href="http://www.chichester.gov.uk" class="govuk-link">Chichester District Council</a></li>
+      <li><a href="http://www.barnet.gov.uk/" class="govuk-link">London Borough of Barnet Council</a></li>
+      <li><a href="http://www.centralbedfordshire.gov.uk/" class="govuk-link">Central Bedfordshire Council</a></li>
+      <li><a href="http://www.southtyneside.info/" class="govuk-link">South Tyneside Metropolitan Borough Council</a></li>
+      <li><a href="http://findyourmp.parliament.uk/" class="govuk-link">Find your MP - UK Parliament</a></li>
+      <li><a href="http://www.waverley.gov.uk/" class="govuk-link">Waverley Borough Council</a></li>
+      <li><a href="http://www.boroughofpoole.com" class="govuk-link">Borough of Poole Council</a></li>
       <li><a href="http://www.carrickfergus.org" class="govuk-link">Carrickfergus Borough Council</a></li>
       <li><a href="http://www.bradford.gov.uk" class="govuk-link">City of Bradford Metropolitan District Council</a></li>
-      <li><a href="http://www.southtyneside.info/" class="govuk-link">South Tyneside Metropolitan Borough Council</a></li>
-      <li><a href="http://www.north-herts.gov.uk" class="govuk-link">North Hertfordshire District Council</a></li>
-      <li><a href="http://www.wandsworth.gov.uk/" class="govuk-link">London Borough of Wandsworth Council</a></li>
-      <li><a href="http://www.uttlesford.gov.uk" class="govuk-link">Uttlesford District Council</a></li>
-      <li><a href="https://nationalcareersservice.direct.gov.uk/advice/courses/" class="govuk-link">Courses and learning - National Careers Service</a></li>
-      <li><a href="https://www.ethnicity-facts-figures.service.gov.uk/crime-justice-and-the-law/policing/stop-and-search/latest" class="govuk-link">Stop and search | Ethnicity facts and figures</a></li>
-      <li><a href="http://www.maldon.gov.uk" class="govuk-link">Maldon District Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
