--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -359,16 +359,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.redbridge.gov.uk/">London Borough of Redbridge Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.carrickfergus.org">Carrickfergus Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.bradford.gov.uk">City of Bradford Metropolitan District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.southtyneside.info/">South Tyneside Metropolitan Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.north-herts.gov.uk">North Hertfordshire District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.wandsworth.gov.uk/">London Borough of Wandsworth Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.uttlesford.gov.uk">Uttlesford District Council</a></li>
-<li><a href="https://www.gov.ukhttps//nationalcareersservice.direct.gov.uk/advice/courses/">Courses and learning - National Careers Service</a></li>
-<li><a href="https://www.gov.ukhttps//www.ethnicity-facts-figures.service.gov.uk/crime-justice-and-the-law/policing/stop-and-search/latest">Stop and search | Ethnicity facts and figures</a></li>
-<li><a href="https://www.gov.ukhttp//www.maldon.gov.uk">Maldon District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.eden.gov.uk/">Eden District Council</a></li>
+<li><a href="https://www.gov.ukhttp//findyourmp.parliament.uk/">Find your MP - UK Parliament</a></li>
+<li><a href="https://www.gov.ukhttp//www.waverley.gov.uk/">Waverley Borough Council</a></li>
+<li><a href="https://www.gov.ukhttps//getintoteaching.education.gov.uk/">Get Into Teaching</a></li>
+<li><a href="https://www.gov.ukhttp//www.suffolkcc.gov.uk">Suffolk County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.burnley.gov.uk/">Burnley Borough Council</a></li>
+<li><a href="https://www.gov.ukhttps//census.gov.uk/">Census 2021</a></li>
+<li><a href="https://www.gov.ukhttp//www.preston.gov.uk">Preston City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.northdown.gov.uk">North Down Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.justice.gov.uk/courts/procedure-rules/family">Family Procedure Rules</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
